# MUSE_LAE_pipeline

./: .env.example  .gitignore  LICENSE  README.md  fontlist-v390.json  matplotlibrc  pyproject.toml  run_pipeline_1fwhm_opt_start.script  run_pipeline_2fwhm_opt_start.script  run_pipeline_noweight_skysub_start.script  run_pipeline_weight_skysub_start.script  step01_spectral_extraction_and_fitting.py  step02_make_megatable.ipynb  step03_finding_contaminants.ipynb  step03_quality_control.ipynb  step04_lensed_counterparts.ipynb  step05_fitting_rt_models.ipynb  step06_refitting_candidate_lines.ipynb  step07_measuring_systemic_redshifts.ipynb  step08_absorption_lines.ipynb  step09_getting_line_upper_bounds.ipynb  step09_megatable_statistics.ipynb  step10_megatable_statistics.ipynb  step11_scaling_relations.ipynb  step12_clumpy_outflows.ipynb
.github/: copilot-instructions.md
additional_notebooks/: compute_fcen_lya.ipynb  merging_tables.ipynb  plotting_absorbers.ipynb  plotting_absorption_profiles.ipynb  plotting_example_lya_profiles.ipynb  showing_highz_dp_sources.ipynb  understanding_r21_galaxy_morphology.ipynb
exploratory_notebooks/: understanding_r21_galaxy_morphology.ipynb
